# google-weather-scraper

./: README.md  scraper.py  setup.cfg
google-weather-scraper/: converters.py  scraper.py
