[metadata]
name = google-weather-scraper
version =
author = lfhohmann@gmail.com
author_email = alberlc@outlook.com
description = Simple BeautifulSoup scraper for Google weather forecast data, including hourly precipitation and wind forecast for a week.
long_description = file: README.rst
url = https://github.com/lfhohmann/google-weather-scraper
project_urls =
    Bug Tracker = https://github.com/lfhohmann/google-weather-scraper/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
install_requires =
    beautifulsoup4
    requests

[options.packages.find]
include = google-weather-scraper*